  - removed cyclic dependencies on STController in all entry views    
 ExerciseViewer changes:
  - added support for Polar RCX3 HRM files (contains limited data only)
  - bugfix for parsing FIT files of Garmin Fenix 2 devices (missing max speed)
    (contribution by Alex Rampp, GitHub pull request #6)
  - updated Garmin FIT SDK library to version 16.50
  - Exercise parsers: read device name from exercise files if available
    (e.g. "Garmin EDGE 520" or "Timex Global Trainer")
  - Main Panel: display device name if available
  - removed Polar-specific exercise attributes 'type number' and 'user ID' from
    parser and Exercise Viewer (no usage, very cryptic, e.g. "2")
 Project changes:
  - use the Ubuntu Trusty image in Travis CI builds, it contains the latest
    Java 8 JDK (no workaround installation needed anymore)

v7.1.0:
 SportsTracker changes:
  - update of the bundled Java runtime to Java SE/FX 8u45, which contains many
    bugfixes
  - removed workarounds for Java versions earlier than 8u40
  - Exercise, Note and Weight Dialogs: use of one formatted text input for the
    entry time instead of separate inputs for hour and minute
    (always ensures valid time values and displayed format)
  - Overview Dialog: use of a spinner control for the year selection, incl.
    mouse wheel support
  - Travis CI: use of latest Oracle Java release (8u45) from 3rd party PPA repo
    (missing in Ubuntu repository)
  - update of ControlFX to 8.40.9
  - added support of HiDPI / Retina displays for all icons and text
    (all images and icons are now available as @2x-versions)
 ExerciseViewer changes:
   - Bugfixes in Diagram Panel (bug #49):
     - time axis in diagram must always start at 00:00 (the timezone offset
       needs to be ignored)
     - display lap markers at proper time positions
     - display proper formatted time in chart tooltips
 Translations:
   - updated french translation by Olivier M. <eliovir@gmail.com>

v7.0.0:
 SportsTracker changes: