@@ -484,11 +484,11 @@ pv.view.close.Action.text=Close
 
 # ExerciseViewer Main panel
 pv.main.general_data.text=General Data
-pv.main.device.text=Device:
-pv.main.type.text=Type:
 pv.main.date.text=Date:
 pv.main.duration.text=Duration:
 pv.main.energy.text=Energy:
+pv.main.device.text=Device:
+pv.main.type.text=Type:
 pv.main.heartrate_data.text=Heart Rate Data
 pv.main.average.text=Average:
 pv.main.maximum.text=Maximum:
