@@ -484,11 +484,11 @@ pv.view.close.Action.text=Schlie\u00DFen
 
 # ExerciseViewer Main panel
 pv.main.general_data.text=Allgemeine Daten
-pv.main.device.text=Ger\u00E4t:
-pv.main.type.text=Typ:
 pv.main.date.text=Datum:
 pv.main.duration.text=Dauer:
 pv.main.energy.text=Energie:
+pv.main.device.text=Ger\u00E4t:
+pv.main.type.text=Typ:
 pv.main.heartrate_data.text=Herzfrequenz-Daten
 pv.main.average.text=Durchschnitt:
 pv.main.maximum.text=Maximum:
