@@ -24,9 +24,12 @@ v7.1.1:
   - bugfix for parsing FIT files of Garmin Fenix 2 devices (missing max speed)
     (contribution by Alex Rampp, GitHub pull request #6)
   - updated Garmin FIT SDK library to version 16.50
+    (improves support for latest Garmin Devices)
   - Exercise parsers: read device name from exercise files if available
     (e.g. "Garmin EDGE 520" or "Timex Global Trainer")
-  - Main Panel: display device name if available
+  - Main Panel:
+    - display device name if available
+    - moved 'device name' and 'type' to bottom of 'General Data' section
   - removed Polar-specific exercise attributes 'type number' and 'user ID' from
     parser and Exercise Viewer (no usage, very cryptic, e.g. "2")
  Project changes:
